app/assets/stylesheets/urls.scss
@import "variables";

button:disabled {
  opacity: 0.65;
}

.url {
  display: inline;
}
.field_with_errors {
  display: inline;
}
.field_with_errors input {
  background-color: #ffc7c7;
}
.error-space {
  color: #d00425;
  background-color: white;
  border-radius: 5px;
  opacity: 0.9;
  font-size: 15px;
  border-radius: 5px;
  overflow: hidden;
}

#chart_div {
  margin-top: 15px;
}

.urls-table-title {
  font-size: 12px;
  padding: 8px 0 13px;
  color: #777;
  font-weight: 500;
  text-transform: uppercase;
}
th {
  i {
    margin-left: 2px;
    margin-right: 5px;
  }
}
/* Give some space to the transfer buttons on the URL page */
.dataTables_wrapper .col-sm-6 > :last-child {
  margin-left: 10px;
}
.dataTables_wrapper .col-sm-6 .btn-primary {
  font-size: 11px;
}
.table-striped > tbody > tr:nth-child(odd) {
  background-color: white;
}
.table-striped > tbody > tr:nth-child(even) {
  background-color: #f9f9f9;
}
div.urls-table-container {
  div.dataTables_wrapper {
    input {
      box-shadow: none;
      border-color: #ccc;
    }
    label {
      font-size: 12px;
      font-weight: 400;
      color: #888;
    }
    td > * {
      vertical-align: middle;
    }
  }
}

#regions-div {
  height: 350px;
}

#regions-pie-div {
  height: 350px;
}

.container-force-full-width {
  width: 100% !important;
}
.container-wrapper {
  position: relative;
}

table.dataTable {
  width: 100%;
  border-radius: 3px;
  // overflow:hidden;
  border: none;
  // box-shadow: 1px 1px 2px rgba(0,0,0,0.1), -1px 1px 2px rgba(0,0,0,0.1);
  font-size: 13px;
  border: 1px solid #ddd;

  .short-url {
    font-weight: 500;
    // white-space:nowrap;
    .btn.clipboard-btn {
      padding-top: 2px;
      padding-bottom: 2px;
    }
    a {
      margin-bottom: 5px;
      max-width: 230px;
      margin-right: 3px;
      // text-overflow: ellipsis;
      // overflow: hidden;
      /* white-space: normal; */
      /* display: inline-block; */
    }
  }
  tbody tr td .dropdown .dropdown-menu.dropdown-menu-right a {
    color: black;
  }

  .long-url {
    margin-top: 1px;
    a {
      color: #999;
      font-size: 11px;
    }
  }
  tbody {
    tr {
      padding: 10px 0;
      td {
        border: none;
        // padding: 25px 5px;
        // &:nth-child(2) {
        //   //maybe the best way to target the "short urls value" since there are no class names on TD's
        //   // padding-right: 30px;
        //   // width: 40%;
        //   // min-width: 200px;
        // }
        // &:nth-child(4) {
        //   //best way to target "created" column value
        //   padding-left: 30px;
        // }
      }
    }
  }
  thead {
    // background-color:#fbfbfb;
    tr {
      th {
        padding: 18px 10px;
        border: none;
        font-weight: 400;
        font-size: 13px;
        border-bottom: 1px solid #eeeeee;
        color: #5f5f5f;
        white-space: nowrap;
        &:last-child {
          padding-right: 20px;
        }
      }
    }
  }
  .table-row-no-padding {
    background-color: #eee !important;
    td {
      padding: 15px 0;
    }
  }

  .urls-table-header-short-url {
    width: 300px !important;
  }
}
@media screen and (max-width: 900px) {
  .table-row-edit-main {
    .super-input {
      input.js-new-url-keyword,
      input.js-new-group-name {
        width: 100px;
      }
    }
  }
}
table.dataTable thead .sorting:after,
table.dataTable thead .sorting_asc:after,
table.dataTable thead .sorting_desc:after,
table.dataTable thead .sorting_asc_disabled:after,
table.dataTable thead .sorting_desc_disabled:after {
  vertical-align: middle;
  display: inline-block;
  margin-left: 3px;
  position: static;
  height: 17px;
}

#button-bar {
  text-align: center;
  .button-bar-inner {
    text-align: initial;
    display: inline-block;
    margin: 20px 0;
  }
}

.stats-actions {
  .btn {
    display: inline-block;
    margin-right: 5px;
    margin-bottom: 5px;
  }
}

.bulk-actions-buttons {
  white-space: nowrap;
  margin-bottom: 0.625rem;

  .btn {
    min-width: 2.5rem;
    padding: 0.375rem 0.75rem;
    margin-right: 0.5rem;

    &:last-child {
      margin-right: 0;
    }

    &[aria-disabled="true"] {
      cursor: not-allowed;
      opacity: 0.4;
    }

    i {
      margin: 0;
    }
    &.btn-outline-danger {
      background: none;
      color: #d95450;
      border: 1px solid #d95450;
      &:hover {
        background-color: #d92232;
        color: white;
        border: 1px solid #d92232;
      }
    }
  }
}

.btn.clipboard-btn {
  padding: 3px 10px;
  // margin-left: 5px;
  font-size: 11px;
  border: none;
  color: $primaryColor;
  /* color: white; */
  background-color: #ededed;
}

.transfer-request-item {
  margin-bottom: 10px;
}

.dropdown-menu-text {
  padding: 0 15px;
  font-weight: 500;
  color: grey;
}

.row-url-keyword,
.row-url-action-buttons {
  white-space: nowrap;
  .btn-xs {
    padding: 3px 7px;
    display: inline;
    vertical-align: middle;
  }
}

#collection-filter {
  margin: 0 15px 0 5px;
}

#urls-table_filter {
  margin-top: 8px;
  label {
    display: inline-block;
    vertical-align: middle;
  }
}

table.dataTable tbody > tr.selected,
table.dataTable tbody > tr > .selected {
  background-color: $primaryColor;
  .bootstrap-select {
    .dropdown-menu {
      color: black;
      ul {
        li {
          a {
            color: black;
          }
        }
      }
    }
  }
}
table.table-bordered.dataTable tbody td {
  vertical-align: middle;
}

table.dataTable tr.selected .fa-ellipsis-h {
  &::before {
    color: white;
  }
}

.url-blurb {
  transition: height 0.3s, padding 0.3s;
  border-top: 1px solid #cfcfcf;
  border-radius: 5px;
  width: 100%;
  background-color: white;
  padding: 10px 20px;
  box-sizing: border-box;
  color: black;
  &.off {
    height: 0;
    padding-top: 0px;
    padding-bottom: 0px;
  }

  .url-blurb-details {
    .url-blurb-source {
      font-size: 9px;
      color: #777;
    }
    .url-blurb-short-url {
      font-size: 14px;
    }
  }

  .url-blurb-close-button {
    background: none;
    border: none;
    border-radius: 100%;
    font-size: 12px;
    opacity: 0.6;
    &:hover {
      opacity: 1;
    }
  }

  .url-blurb-actions {
    .url-blurb-actions-header {
      font-size: 9px;
      text-transform: uppercase;
      color: #777;
    }
  }
}
.url-share-button {
  font-size: 10px;
  padding: 4px;
  background: none;
  color: blue;
  border-radius: 3px;
  font-weight: 500;
  width: 90px;

  &.url-share-button-large {
    font-size: 12px;
    margin: 0 7px;
  }
  &:hover {
    background: #eaeaea;
  }
  &.url-share-button-twitter {
    color: #51adec;
    border: 1px solid #51adec;
  }
  &.url-share-button-qr {
    color: #333;
    border: 1px solid #333;
  }
}
.panel-body {
  .url-share-button {
    padding: 5px;
    width: 100px;
  }
}

.actions-column {
  white-space: nowrap;
  text-align: center;
  * > {
    text-align: initial;
  }

  .actions-dropdown-button {
    background: none;
    border: none;
    padding: 3px;
    margin-top: -6px;
  }
  .delete-url,
  .delete-group {
    background-color: #d95450;
    color: white !important;
    &:active {
      background-color: #d95450;
    }
    &:hover {
      background-color: #d92232;
    }
  }
  .dropdown-submenu.pull-left {
    float: none !important;
    .dropdown-menu {
      overflow: hidden;
    }
  }

  .dropdown-menu {
    padding: 0;
    a {
      display: block;
      padding: 10px 20px;
      clear: both;
      font-weight: normal;
      line-height: 1.42857143;
      color: #333;
      white-space: nowrap;
      border-radius: 0;
      margin-bottom: 0;
    }
    li button.url-share-button {
      width: 100%;
      padding: 15px 10px;
      border-radius: 0;
      font-size: 12px;
      border: none;
      &:hover {
        background: #f5f5f5;
      }
      &.url-share-button-twitter {
        color: #51adec;
        font-size: 13px;
        i.fa::before {
          font-size: 13px;
          color: #51adec;
        }
      }
      &.url-share-button-qr {
        color: black;
        font-size: 13px;
      }
    }
  }
  i.fa {
    &.fa-ellipsis-h {
      &::before {
        color: #888;
        font-size: 15px;
      }
    }
  }
}
.bootstrap-select {
  height: auto;
  margin-top: -3px;
}
.selectpicker {
  height: auto !important;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 13px;
}

.bootstrap-select .selectpicker.btn-default {
  width: 100%;
  box-shadow: none;
  background-color: #ededed;
  color: white;
  color: $primaryColor;
  border: none;
}
.loading-indicator-wrapper {
  background: rgba(255, 255, 255, 0.8);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 3;
  .loading-indicator {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    margin: auto;
  }
}
.selectpicker {
  .bottom-action-option {
    /* color: white; */
    /* background-color: #3687c5; */
    margin: 0 10px 5px;
    /* border-radius: 5px; */
    /* border: 1px solid #3687c5; */
    color: #3687c5;
    padding: 11px 20px;
    font-size: 12px;
    font-weight: 500;
    margin: 8px 0 5px;
    border-top: 1px solid lightgrey;
    /* padding-top: 11px; */
    /* position: absolute; */
    margin-bottom: 0;
  }
}

// fix for table on urls page
#urls-table {
  table-layout: auto;

  td,
  th {
    width: auto;
    min-width: 5rem;
  }

  // have the z-link column take up the remaining space
  td:nth-child(2),
  th:nth-child(2) {
    width: 100%;
  }

  // select-all checkbox
  thead .select-checkbox {
    text-align: center;
  }

  // search inputs in the bottom of the data-table
  tfoot input {
    width: 100%;
  }

  // the select checkbox and the last column with actions
  // don't need search inputs
  tfoot th:first-child input,
  tfoot th:last-child input {
    display: none;
  }
}

.collection-filter-select {
  border: 1px solid #ddd;
  font-size: 0.75rem;
  padding: 0.25rem 1.5rem 0.25rem 0.5rem;
  border-radius: 3px;
  max-width: 6rem;
}

